# HepatizonCore

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README-linux.txt  README-win.txt  README.md  STRUCTURE.md  ThirdPartyNotices.txt  vcpkg.json
.github/workflows/: ci.yml  release.yml
adapters/include/hepatizon/crypto/providers/: NativeProviderFactory.hpp  OpenSslProviderFactory.hpp
adapters/include/hepatizon/storage/sqlite/: SqliteStorageRepositoryFactory.hpp
include/hepatizon/core/: KdfPolicy.hpp  Session.hpp  VaultHeader.hpp  VaultHeaderAad.hpp  VaultService.hpp
include/hepatizon/crypto/: ICryptoProvider.hpp  KdfMetadata.hpp  KeyDerivation.hpp
include/hepatizon/crypto/providers/: OpenSslProviderFactory.hpp
include/hepatizon/security/: KeyDerivation.hpp  MemoryWiper.hpp  ScopeWipe.hpp  SecureBuffer.hpp  SecureEquals.hpp  SecureRandom.hpp  SecureString.hpp  ZeroAllocator.hpp
include/hepatizon/storage/: IStorageRepository.hpp  StorageErrors.hpp
internal/include/hepatizon/crypto/: KeyDerivation.hpp
scripts/: windeployqt.ps1
src/: CMakeLists.txt
src/core/: CMakeLists.txt  KdfPolicy.cpp  LittleEndian.hpp  Session.cpp  VaultHeader.cpp  VaultHeaderAad.cpp  VaultService.cpp  core_anchor.cpp
src/crypto/: CMakeLists.txt
src/crypto/kdf/monocypher/: KeyDerivation.cpp
src/crypto/native/: NativeCryptoProvider.cpp  native_anchor.cpp
src/crypto/openssl/: OpenSslCryptoProvider.cpp  openssl_anchor.cpp
src/platform/: CMakeLists.txt  platform_anchor.cpp
src/security/: CMakeLists.txt  KeyDerivation.cpp  MemoryWiper.cpp  SecureRandom.cpp  security_anchor.cpp
src/storage/: CMakeLists.txt
src/storage/json/: json_anchor.cpp
src/storage/sqlite/: SqliteStorageRepository.cpp  sqlite_anchor.cpp
src/ui/: CMakeLists.txt  resources.qrc
src/ui/cli/: ConsoleUtils.cpp  ConsoleUtils.hpp  InteractiveShell.cpp  InteractiveShell.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
src/ui/gui/: GuiSettings.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  theme.qss
src/ui/gui/components/: SecretDialog.cpp  SecretDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TitleBar.cpp  TitleBar.hpp
src/ui/gui/views/: AddSecretView.cpp  AddSecretView.hpp  DashboardView.cpp  DashboardView.hpp  LoginView.cpp  LoginView.hpp
tests/: CMakeLists.txt
tests/gui/: TestLoginView.cpp  main.cpp
tests/test_utils/: TestUtils.hpp  VaultServiceScenarios.hpp
tests/unit/: console_utils_test.cpp  interactive_shell_test.cpp  key_derivation_test.cpp  memory_wiper_test.cpp  native_crypto_provider_test.cpp  openssl_kdf_parity_test.cpp  sample_test.cpp  scope_wipe_test.cpp  secure_buffer_test.cpp  secure_random_test.cpp  secure_string_test.cpp  security_primitives_test.cpp  session_test.cpp  sqlite_storage_repository_test.cpp  tokenizer_test.cpp  vault_service_error_test.cpp  vault_service_native_integration_test.cpp  vault_service_openssl_integration_test.cpp  zero_allocator_test.cpp
